--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   code_timer: ^1.0.4
   orange:
   shared_preferences: ^2.2.3
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  sembast: ^3.7.1
+  path_provider: ^2.1.3
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
